Implemented Initial Landing Page, will improve UI

--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,3 +1,11 @@
+<div id="headSection">
+  <div class="container-fluid">
+      <div class="row">
+          Tembusu
+      </div>
+  </div>
+</div>
+
 <div class="jumbotron">
   <h1>Non-Trivial AngularJS Made Easy</h1>
 
