--- a/src/common/style.less
+++ b/src/common/style.less
@@ -124,7 +124,7 @@ a:hover,a:focus {
             margin-top: 20px;
         }
         a:hover {
-            color: #03C9A9;
+            color: #968d81;
         }
     }
     img.logo {
@@ -220,7 +220,7 @@ a:hover,a:focus {
     display: block;
     text-align: center;
     font-size: 20px;
-    color: #ffffff;
+    color: #654321;
     width: 40px;
     height: 40px;
     line-height: 40px;
@@ -245,7 +245,7 @@ tg {
     color: #b6b6b6;
 }
 tgr {
-    color: #03C9A9;
+    color: #968d81;
 }
 hr {
     border: 1px solid #5a5a5a;
