--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,3 +1,35 @@
+@import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
+.container {
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+#headSection {
+  background: url(img/old_paper.jpg) no-repeat center top;
+  padding-top: 200px;
+  text-align:center;
+  background-attachment: relative;
+  background-position: center center;
+  min-height: 700px;
+  width: 100%;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
+  .container-fluid .row{
+    font-family: 'UnifrakturMaguntia', cursive;
+    font-size: 60px;
+    color: #654321;
+  }
+}
+
 .jumbotron {
   margin: 40px 0 80px 0;
   text-align: center;
@@ -27,7 +59,7 @@
   .row:last-child {
     margin-bottom: 0;
   }
-  
+
   h4 [class*=" icon-"], h4 [class^="icon-"] {
     margin-right: 5px;
     vertical-align: -10%;
@@ -35,4 +67,3 @@
     line-height: 1;
   }
 }
-
