--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,8 +1,17 @@
-<div class="row" ng-repeat="member in teamMembers track by $index">
-    <div class="col-md-12">
-        <img src="" alt="" />
-        <p class="h3">Name</p>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<div class="row">
+    <header class="col-md-12">
+        <h1 class="text-center">The Team</h1>
+    </header>
+
+    <div class="col-md-12" ng-repeat="member in teamMembers track by $index">
+        <div class="col-xs-12 col-md-offset-4 col-md-4">
+            <img class="vn-about-profile img-circle img-responsive center-block" src="/assets/images/{{ member.shortname }}_profile.jpg" alt="{{ member.name }}" />
+        </div>
+        <div class="col-xs-12">
+            <p class="h3 text-center">{{ member.name }}</p>
+            <p class="h4 text-center">{{ member.title }}</p>
+            <p class="lead">{{ member.about }}</p>
+        </div>
     </div>
 </div>
 
