--- a/src/less/main.less
+++ b/src/less/main.less
@@ -121,5 +121,6 @@ h2 {
 @import '../common/ionicons.min.less';
 @import '../app/updates/updates.less';
 @import '../app/home/home.less';
+@import '../app/about/about.less';
 @import '../common/style.less';
 // @import '../common/icons.less';
