--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,18 +1,24 @@
 @import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
-.container {
-  padding-right: 0;
-  padding-left: 0;
-  margin-right: auto;
-  margin-left: auto;
-}
+// .container {
+//   padding-right: 0;
+//   padding-left: 0;
+//   margin-right: auto;
+//   margin-left: auto;
+// }
+
 
 #headSection {
-  background: url(img/old_paper.jpg) no-repeat center top;
-  padding-top: 200px;
+  position: fixed;
+  background: transparent url(img/landing.jpg) no-repeat center top;
+  background-size:cover;
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
   text-align:center;
+  padding-bottom: 100px;
   background-attachment: relative;
   background-position: center center;
-  min-height: 700px;
+  min-height: 100%;
   width: 100%;
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
@@ -22,6 +28,11 @@
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+
+  .container-fluid {
+      padding: 0px;
+      margin: 0px;
+  }
 
   .container-fluid .row{
     font-family: 'UnifrakturMaguntia', cursive;
