--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,7 +1,7 @@
-<div id="headSection">
-  <div class="container-fluid">
-      <div class="row">
-          Tembusu
-      </div>
+<div class="">
+  <div id="headSection">
+    <div class="container-fluid">
+            <img id="landingLogo" class="img-responsive" src="../src/assets/img/logo.jpg" alt="" />
+    </div>
   </div>
 </div>
