--- a/src/less/main.less
+++ b/src/less/main.less
@@ -118,8 +118,8 @@ h2 {
 * TODO: In a later version of this boilerplate, I'd like to automate this.
 */
 @import '../common/ionicons.min.less';
-@import '../app/updates/updates.less';
 @import '../app/home/home.less';
+@import '../app/og/og.less';
 @import '../common/style.less';
 @import '../common/nav.less';
 
