--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -9,3 +9,9 @@
 
 @sansFontFamily: 'Roboto', sans-serif;
 
+@color-primary: #FFEFCE;
+@color-primary-off: #E5D7B9;
+@color-primary-dark: #403C33;
+@color-secondary: #BFB39A;
+@color-secondary-off: #7F7767;
+
