OGs overview done

--- a/src/app/og/og.tpl.html
+++ b/src/app/og/og.tpl.html
@@ -1,3 +1,19 @@
-<div class="">
-  
+<!-- {{ogLogoCollection}} -->
+<div id="bg" class="container-fluid">
+  <div class="row">
+    <div id="imgBox" class="darken col-md-3" ng-repeat="ogLogo in ogLogoCollection">
+      <img class="img-responsive" ng-src="{{ogLogo}}" />
+    </div>
+  </div>
 </div>
+
+<!-- <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+	<div class="flipper">
+		<div class="front">
+	 front content
+		</div>
+		<div class="back">
+		back content
+		</div>
+	</div>
+</div> -->
