--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -8,3 +8,13 @@
  */
 
 @sansFontFamily: 'Roboto', sans-serif;
+
+/**
+ * Colours
+ */
+@color-primary: #FFEFCE;
+@color-primary-off: #E5D7B9;
+@color-primary-dark: #403C33;
+@color-secondary: #BFB39A;
+@color-secondary-off: #7F7767;
+
