go sub view structure/routing established

--- a/src/app/og/og.tpl.html
+++ b/src/app/og/og.tpl.html
@@ -7,6 +7,8 @@
   </div>
 </div>
 
+<a ui-sref="og.ogSubView">subview</a>
+<div ui-view></div>
 <!-- <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
 	<div class="flipper">
 		<div class="front">
