--- a/src/less/main.less
+++ b/src/less/main.less
@@ -138,5 +138,6 @@ html, body {
  @import '../common/ionicons.min.less';
  @import '../app/home/home.less';
  @import '../app/og/og.less';
+ @import '../app/og/ogSubView/ogSubView.less';
  @import '../common/style.less';
  @import '../common/navbar.less';
