--- a/src/app/og/og.tpl.html
+++ b/src/app/og/og.tpl.html
@@ -1,21 +1,23 @@
 <!-- {{ogLogoCollection}} -->
-<div id="bg" class="container-fluid">
-  <div class="row">
-    <div id="imgBox" class="darken col-md-3" ng-repeat="ogLogo in ogLogoCollection">
-      <img class="img-responsive" ng-src="{{ogLogo}}"/>
+
+<div ui-view>
+  <div id="bg" class="container-fluid">
+    <div class="row" ng-init="indxFirst = $index">
+      <div id="imgBox" class="darken col-md-3" ng-repeat="ogLogo in ogLogoCollection track by $index" ng-click="setIndex($index)">
+        <nav>
+            <a class="view" ui-sref="og.ogSubView"><img class="img-responsive" ng-src="{{ogLogo}}"/></a>
+        </nav>
+      </div>
     </div>
   </div>
 </div>
-
-<a ui-sref="og.ogSubView">subview</a>
-<div ui-view></div>
 <!-- <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
-	<div class="flipper">
-		<div class="front">
-	 front content
-		</div>
-		<div class="back">
-		back content
-		</div>
-	</div>
+<div class="flipper">
+<div class="front">
+front content
+</div>
+<div class="back">
+back content
+</div>
+</div>
 </div> -->
