Added back navigation
@xbili for some reason the ng-click for back button in
og/ogSubView/ogSubView.tpl.html is not firing. Tried a lot of
variations to no avail. The function in the controller works fine, but
some how the button is not clickable. Probably doing something stupid
here, just take a look and see if you spot anything obvious? thanks.

--- a/src/app/og/og.tpl.html
+++ b/src/app/og/og.tpl.html
@@ -1,8 +1,7 @@
 <!-- {{ogLogoCollection}} -->
-
 <div ui-view>
   <div id="bg" class="container-fluid">
-    <div class="row" ng-init="indxFirst = $index">
+    <div class="row">
       <div id="imgBox" class="darken col-md-3" ng-repeat="ogLogo in ogLogoCollection track by $index" ng-click="setIndex($index)">
         <nav>
             <a class="view" ui-sref="og.ogSubView"><img class="img-responsive" ng-src="{{ogLogo}}"/></a>
