--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -1,6 +1,6 @@
-<div class="">
-  <nav>
-      <a ng-click="back()">back</a>
-  </nav>
-  {{imgNameCollection[currentIndex]}}
+<div class="container-fluid">
+  <button class="btn btn-success" type="button" name="Back" ng-click="back()">Back</button>
+  <p>
+    {{imgNameCollection[currentIndex]}} {{test}}
+  </p>
 </div>
