Shifted navbar css into navbar.less
Please keep it that way, navbar less will contain all of navbar's css

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -15,6 +15,7 @@
 }
 
 body {
+    height: 100%;
     font-family: 'Josefin Slab';
 }
 
@@ -138,5 +139,5 @@ html, body {
  @import '../common/ionicons.min.less';
  @import '../app/home/home.less';
  @import '../app/og/og.less';
- @import '../common/style.less';
  @import '../common/navbar.less';
+
