--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -128,3 +128,34 @@
     right: 125%;
   }
 }
+#menuToggle {
+  position:fixed;
+    top:10px;
+    right: 10px;
+    width:100%;
+    z-index:100;
+  display: block;
+  text-align: center;
+  font-size: 30px;
+  color: #e3e3e3;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  cursor: pointer;
+  background: rgba(0,0,0,0.25);
+  -webkit-transition: all .1s ease-in-out;
+  -moz-transition: all .1s ease-in-out;
+  -ms-transition: all .1s ease-in-out;
+  -o-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+}
+#menuToggle:hover {
+  color: #212121;
+  background: rgba(0,0,0,0.2);
+  -webkit-transition: all .1s ease-in-out;
+  -moz-transition: all .1s ease-in-out;
+  -ms-transition: all .1s ease-in-out;
+  -o-transition: all .1s ease-in-out;
+  transition: all .1s ease-in-out;
+}
+
