--- a/src/app/updates/updates.less
+++ b/src/app/updates/updates.less
@@ -1,38 +1,13 @@
-.jumbotron {
-  margin: 40px 0 80px 0;
-  text-align: center;
+.updates {
+    background-image: url(img/shared/vn-background.jpg);
 
-  h1 {
-    margin-bottom: 20px;
-    font-size: 55px;
-    line-height: 1;
-  }
-
-  .lead {
-    font-size: 24px;
-    line-height: 1.25;
-  }
-
-  .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-  }
-}
-
-.marketing {
-  .row {
-    margin-bottom: 10px;
-  }
-
-  .row:last-child {
-    margin-bottom: 0;
-  }
-  
-  h4 [class*=" icon-"], h4 [class^="icon-"] {
-    margin-right: 5px;
-    vertical-align: -10%;
-    font-size: 28px;
-    line-height: 1;
-  }
+    header h1 {
+        font-weight: 700;
+    }
+    .vn-update-box {
+        background-color: @color-primary;
+        border-radius: 5px;
+        box-shadow: 5px 5px 10px -4px @color-primary-dark;
+    }
 }
 
