About us page implementation

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -1,5 +1,15 @@
-body {
-    .vn-about-profile {
-        width: 25%;
+.about {
+    background-image: url(img/shared/vn-background.jpg);
+    header h1 {
+        font-weight: 700;
+    }
+    .vn-profile-img {
+        width: 100px;
+    }
+    .vn-member-box {
+        background-color: @color-primary;
+        border-radius: 5px;
+        box-shadow: 5px 5px 10px -4px @color-primary-dark;
     }
 }
+
