--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -13,7 +13,6 @@
   -webkit-transition: background 500ms ease;
   -moz-transition: background 500ms ease;
   transition: background 500ms ease;
-  z-index: 999999999;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -23,7 +22,7 @@
   height: 100%;
   width: 100%;
   text-align: center;
-  z-index: 0;
+  z-index: -100;
   -moz-box-shadow: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
@@ -122,7 +121,6 @@
   left: auto;
   right: 30px;
   position: fixed;
-  z-index: 9999999999999;
   .option {
     left: auto;
     right: 125%;
@@ -138,7 +136,7 @@
   display: block;
   text-align: center;
   font-size: 30px;
-  color: #e3e3e3;
+  color: white;
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -151,7 +149,7 @@
   transition: all .1s ease-in-out;
 }
 #menuToggle:hover {
-  color: #212121;
+  color: #e3e3e3;
   background: rgba(0,0,0,0.2);
   -webkit-transition: all .1s ease-in-out;
   -moz-transition: all .1s ease-in-out;
