--- a/src/app/about/about.tpl.html
+++ b/src/app/about/about.tpl.html
@@ -1,7 +1,9 @@
 <div class="about">
     <div class="container">
         <header class="row">
-            <h1>The Team</h1>
+            <div class="col-md-12 text-center">
+                <h1>The Team</h1>
+            </div>
         </header>
 
         <div class="row">
