--- a/src/app/updates/updates.tpl.html
+++ b/src/app/updates/updates.tpl.html
@@ -1,7 +1,7 @@
 <div class="updates">
     <div class="container left-padding-2 right-padding-2">
         <header class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 text-center">
                 <h1>Latest Updates</h1>
             </div>
         </header>
