Updated landing page for desktops

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,25 +1,16 @@
 @import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
-// .container {
-//   padding-right: 0;
-//   padding-left: 0;
-//   margin-right: auto;
-//   margin-left: auto;
-// }
-img{
-  background-color:rgba(255,0,0,0.5);
-}
 
 /* ----------- Non-Retina Screens ----------- */
 
 #headSection {
   position: fixed;
-  background-color: #212121;
+  background-color: #1F1F1F;
   // background-size:cover;
   display: flex;
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
   text-align:center;
-  padding-bottom: 100px;
+  // padding-bottom: 100px;
   background-attachment: relative;
   background-position: center center;
   min-height: 100%;
@@ -36,19 +27,5 @@ img{
   .container-fluid {
       padding: 0px;
       margin: 0px;
-  }
-
-  .container-fluid .row{
-    font-family: 'UnifrakturMaguntia', cursive;
-    font-size: 60px;
-    color: #654321;
-  }
-}
-
-@media screen
-  and (min-device-width: 1200px)
-  and (max-device-width: 1600px) {
-  #headSection{
-    max-height: 5px
   }
 }
