--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -1,7 +1,5 @@
-<div class="">
+<div class="container-fluid">
   <div id="headSection">
-    <div class="container-fluid">
-            <img id="landingLogo" class="img-responsive" src="assets/img/bg/logo.jpg" alt="" />
-    </div>
+        <img id="landingLogo" class="img-responsive" src="assets/img/bg/logo_small.jpg" alt="" />
   </div>
 </div>
