--- a/src/app/og/og.less
+++ b/src/app/og/og.less
@@ -1,5 +1,5 @@
 #bg {
-  background: url("img/bg/landing.jpg") no-repeat center top;
+  background: url("img/shared/vn-background.jpg") no-repeat center top;
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
