--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -1,8 +1,10 @@
-@import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
+// @import url(http://fonts.googleapis.com/css?family=UnifrakturMaguntia);
+@import url(http://fonts.googleapis.com/css?family=Josefin+Slab:300,400,700);
 
 /* ----------- Non-Retina Screens ----------- */
 
 #headSection {
+  z-index: -10;
   position: fixed;
   background-color: #1F1F1F;
   // background-size:cover;
@@ -10,7 +12,7 @@
   justify-content: center; /* align horizontal */
   align-items: center; /* align vertical */
   text-align:center;
-  // padding-bottom: 100px;
+  padding-bottom: 20px;
   background-attachment: relative;
   background-position: center center;
   min-height: 100%;
@@ -28,4 +30,19 @@
       padding: 0px;
       margin: 0px;
   }
+}
+.uicontainer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  // justify-content: center; /* align horizontal */
+  // align-items: center; /* align vertical */
+  line-height: 180vh;
+  text-align:center;
+}
+
+#continueBtn{
+  font-family: 'Josefin Slab', serif;
+  font-size: 20px;
+  z-index: 10;
 }
