Remove list-style-type for navbar ul

--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -36,6 +36,7 @@
     -ms-transform: translateY(-50%);
     -o-transform: translateX(-50%);
     transform: translateY(-50%);
+    list-style-type: none;
     li {
       a {
         display: block;
