--- a/src/app/home/home.tpl.html
+++ b/src/app/home/home.tpl.html
@@ -3,6 +3,6 @@
         <img id="landingLogo" class="img-responsive" src="assets/img/bg/logo_small.jpg" alt="" />
   </div>
   <div class="ui inverted segment uicontainer">
-    <button id="continueBtn" ng-click="proceed()" class="ui inverted button">Continue</button>
+    <button id="continueBtn" ng-click="proceed()" class="ui inverted button">Enter</button>
   </div>
 </div>
