Changed BG to papyrus base

--- a/src/app/updates/updates.less
+++ b/src/app/updates/updates.less
@@ -1,13 +1,17 @@
 .updates {
-    background-image: url(img/shared/vn-background.jpg);
+  background-image: url(img/shared/vn-background.jpg);
+  -webkit-background-size: 100% auto;
+  -moz-background-size: 100% auto;
+  -ms-background-size: 100% auto;
+  -o-background-size: 100% auto;
+  background-size: 100% auto;
 
-    header h1 {
-        font-weight: 700;
-    }
-    .vn-update-box {
-        background-color: @color-primary;
-        border-radius: 5px;
-        box-shadow: 5px 5px 10px -4px @color-primary-dark;
-    }
+  header h1 {
+    font-weight: 700;
+  }
+  .vn-update-box {
+    background-color: @color-primary;
+    border-radius: 5px;
+    box-shadow: 5px 5px 10px -4px @color-primary-dark;
+  }
 }
-
