--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -1,5 +1,11 @@
 .about {
     background-image: url(img/shared/vn-background.jpg);
+    -webkit-background-size: 100% auto;
+    -moz-background-size: 100% auto;
+    -ms-background-size: 100% auto;
+    -o-background-size: 100% auto;
+    background-size: 100% auto;
+    
     header h1 {
         font-weight: 700;
     }
@@ -12,4 +18,3 @@
         box-shadow: 5px 5px 10px -4px @color-primary-dark;
     }
 }
-
