Completed Info View

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -6,7 +6,7 @@
 #headSection {
   z-index: -10;
   position: fixed;
-  background-color: #1F1F1F;
+  background-color: rgb(31, 31, 31);
   // background-size:cover;
   display: flex;
   justify-content: center; /* align horizontal */
@@ -26,10 +26,10 @@
   -o-background-size: cover;
   background-size: cover;
 
-  .container-fluid {
-    padding: 0px;
-    margin: 0px;
-  }
+  // .container-fluid {
+  //   padding: 0px;
+  //   margin: 0px;
+  // }
 }
 .uicontainer {
   position: fixed;
