--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -3,7 +3,7 @@
   overflow: hidden;
   top: 0;
   background: transparent;
-  text-align: left;
+  // text-align: left;
   display: block;
   -o-transform: translate3d(0, 0, 0);
   -ms-transform: translate3d(0, 0, 0);
@@ -87,6 +87,14 @@
         -moz-transition-delay: 0.075s;
         -o-transition-delay: 0.075s;
         transition-delay: 0.075s;
+      }
+    }
+    li:nth-child(5) {
+      a {
+        -webkit-transition-delay: 0.01s;
+        -moz-transition-delay: 0.01s;
+        -o-transition-delay: 0.01s;
+        transition-delay: 0.01s;
       }
     }
   }
