--- a/src/less/main.less
+++ b/src/less/main.less
@@ -164,4 +164,4 @@ html, body {
 @import '../app/og/ogSubView/ogSubView.less';
 @import '../app/about/about.less';
 @import '../app/updates/updates.less';
-
+@import '../app/info/info.less';
