Building OG SubView

--- a/src/app/info/info.less
+++ b/src/app/info/info.less
@@ -3,7 +3,7 @@
 
 /* ----------- Non-Retina Screens ----------- */
 body{
-  background-color: rgb(31, 31, 31);
+  background-color: #212121;
   // color: rgb(227, 228, 227);
 }
 #mainDiv {
