--- a/src/app/info/info.tpl.html
+++ b/src/app/info/info.tpl.html
@@ -52,5 +52,8 @@
           </p>
         </ul>
 
+        <p>
+          If any of your queries have not been brought up above, please send them to <a href="mailto:tembusuorientation2015@gmail.com">tembusuorientation2015@gmail.com</a>
+        </p>
   </div>
 </div>
