--- a/src/less/main.less
+++ b/src/less/main.less
@@ -165,3 +165,4 @@ html, body {
 @import '../app/about/about.less';
 @import '../app/updates/updates.less';
 @import '../app/info/info.less';
+@import '../common/anim.less';
