--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -6,7 +6,7 @@
 #headSection {
   z-index: -10;
   position: fixed;
-  background-color: rgb(31, 31, 31);
+  background-color: #212121;
   // background-size:cover;
   display: flex;
   justify-content: center; /* align horizontal */
