--- a/src/app/og/og.tpl.html
+++ b/src/app/og/og.tpl.html
@@ -1,11 +1,9 @@
 <!-- {{ogLogoCollection}} -->
-<div ui-view>
+<div ui-view class="ogView">
   <div id="bg" class="container-fluid">
     <div class="row">
       <div id="imgBox" class="darken col-md-3" ng-repeat="ogLogo in ogLogoCollection track by $index" ng-click="setIndex($index)">
-        <nav>
             <a class="view" ui-sref="og.ogSubView"><img class="img-responsive" ng-src="{{ogLogo}}"/></a>
-        </nav>
       </div>
     </div>
   </div>
