--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -137,11 +137,12 @@
 }
 
 #menuToggle {
+  border-radius: 7px;
   position:fixed;
-    top:10px;
-    right: 10px;
-    width:100%;
-    z-index:100;
+  top:10px;
+  right: 10px;
+  width:100%;
+  z-index:100;
   display: block;
   text-align: center;
   font-size: 30px;
@@ -150,12 +151,16 @@
   height: 40px;
   line-height: 40px;
   cursor: pointer;
-  background: rgba(0,0,0,0.25);
+  background: rgba(0,0,0,0.5);
   -webkit-transition: all .1s ease-in-out;
   -moz-transition: all .1s ease-in-out;
   -ms-transition: all .1s ease-in-out;
   -o-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
+
+  i{
+    padding: 5px;
+  }
 }
 #menuToggle:hover {
   color: #e3e3e3;
@@ -165,4 +170,17 @@
   -ms-transition: all .1s ease-in-out;
   -o-transition: all .1s ease-in-out;
   transition: all .1s ease-in-out;
+}
+
+//Animations
+/**********************
+      MIXINS
+***********************/
+.uiViewSlide() {
+  -webkit-transition: 0.9s ease-in-out;
+  -moz-transition: 0.9s ease-in-out;
+  -o-transition: 0.9s ease-in-out;
+  transition: 0.9s ease-in-out;
+  position: absolute;
+  width: 100%;
 }
