--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -1,14 +1,16 @@
-#subview{
-    padding: 3%;
-}
+// #subview{
+//     padding: 3%;
+//     padd
+// }
 
 #ogHeader, #ogl{
+  padding-top: 5%;
   font-size: 80px;
   text-align: center;
 }
 .col-md-6 img{
   z-index: -10;
-  max-height: 100%;
+  min-height: 100%;
   // -webkit-filter: grayscale(100%) invert(100%) ;
   // filter: grayscale(100%) invert(100%);
 }
@@ -69,8 +71,15 @@
   transition: all .1s ease-in-out;
 }
 .ogl{
-text-align: center;
+text-align: left;
+
+li{
+  font-size: 30px;
 }
+}
+
+
+
 .col-md-2 img {
   padding-left: 1%;
   padding-right: 1%;
