--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -1,28 +1,34 @@
 <div class="container-fluid" id="subview">
   <div class="row">
-    <i id="backBtn" class="fa fa-chevron-circle-left"></i>
+    <i id="backBtn" ng-click="goBack()" class="fa fa-chevron-left"></i>
     <div class="col-md-6">
       <img src="{{ogLogoCollection[currentIndex]}}" class="img-responsive" alt="" />
     </div>
     <div class="col-md-6" id="ogContent">
-      <p id="ogHeader">{{imgNameCollection[currentIndex]}}</p>
-      <div ng-repeat="(og, info) in ogInfo">
+      <p id="ogHeader">{{currentName}}</p>
+      <div>
         <div id="quote">
-          "{{info["quote"]}}"
+          "{{currentOGInfo["quote"]}}"
         </div>
         <br>
         <div id="by">
-          - {{info["by"]}}
+          - {{currentOGInfo["by"]}}
         </div>
         <br>
         <div id="desc">
-          {{info["desc"]}}
+          {{currentOGInfo["desc"]}}
         </div>
         <br>
 
         <p id="ogl">ogls</p>
         <div class="row ogl">
-          <div class="col-md-4">
+          <ul>
+            <li id="headOGL">{{currentOGInfo["headOGL"]}}</li>
+          </ul>
+          <ul ng-repeat="ogl in ogls">
+            <li>{{ogl}}</li>
+          </ul>
+          <!-- <div class="col-md-4">
             <img src="http://www.innovativephp.com/demo/impress-js-demos/chapter5/images/aboutme.jpg" class="img-responsive" alt="" />
             <br>
             ogl1
@@ -36,7 +42,7 @@
             <img src="http://www.innovativephp.com/demo/impress-js-demos/chapter5/images/aboutme.jpg" class="img-responsive" alt="" />
             <br>
             ogl3
-          </div>
+          </div> -->
         </div>
 
       </div>
