--- a/src/app/updates/updates.less
+++ b/src/app/updates/updates.less
@@ -9,9 +9,13 @@
   header h1 {
     font-weight: 700;
   }
-  .vn-update-box {
-    background-color: @color-primary;
-    border-radius: 5px;
-    box-shadow: 5px 5px 10px -4px @color-primary-dark;
+  .vn-update-box p {
+      white-space: pre-wrap;
+  }
+  .vn-update-img {
+    max-height: 300px;
+    max-width: 300px;
+    border: 5px solid black;
   }
 }
+
