--- a/src/app/updates/updates.tpl.html
+++ b/src/app/updates/updates.tpl.html
@@ -6,11 +6,12 @@
     </header>
 
     <div class="row">
-        <article class="col-md-4 left-padding-1 right-padding-1 bot-margin-1" ng-repeat="update in updates">
-            <div class="vn-update-box all-padding-1">
+        <article class="col-md-12 left-padding-1 right-padding-1 bot-margin-1" ng-repeat="update in updates">
+            <div class="vn-update-box all-padding-1 clearfix">
+                <img class="img-responsive vn-update-img pull-left right-margin-1" src="/assets/img/about/moazzam_profile.jpg" alt="Moazzam" />
                 <h2>{{ update.title }}</h2>
                 <p>{{ update.date }}</p>
-                <p>{{ update.content }}</p>
+                <p ng-bind-html="update.content"></p>
             </div>
         </article>
     </div>
