Pulled OG Data out to JSON

--- a/src/app/info/info.tpl.html
+++ b/src/app/info/info.tpl.html
@@ -47,13 +47,14 @@
           <br>
           <li>{{qn}}</li>
           <br>
-          <p>
+          <p class="ans">
             {{ans}}
           </p>
         </ul>
-
-        <p>
+        <br>
+        <p class="ans">
           If any of your queries have not been brought up above, please send them to <a href="mailto:tembusuorientation2015@gmail.com">tembusuorientation2015@gmail.com</a>
         </p>
+        <br>
   </div>
 </div>
