--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -8,6 +8,11 @@
   font-size: 80px;
   text-align: center;
 }
+
+#headOGL{
+  color: rgb(227, 86, 86);
+}
+
 .col-md-6 img{
   z-index: -10;
   min-height: 100%;
