--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -1,4 +1,5 @@
 <div class="container-fluid" id="subview">
+  {{currentIndex}}
   <div class="row">
     <i id="backBtn" ng-click="goBack()" class="fa fa-chevron-left"></i>
     <div class="col-md-6">
@@ -28,23 +29,7 @@
           <ul ng-repeat="ogl in ogls">
             <li>{{ogl}}</li>
           </ul>
-          <!-- <div class="col-md-4">
-            <img src="http://www.innovativephp.com/demo/impress-js-demos/chapter5/images/aboutme.jpg" class="img-responsive" alt="" />
-            <br>
-            ogl1
-          </div>
-          <div class="col-md-4">
-            <img src="http://www.innovativephp.com/demo/impress-js-demos/chapter5/images/aboutme.jpg" class="img-responsive" alt="" />
-            <br>
-            ogl2
-          </div>
-          <div class="col-md-4">
-            <img src="http://www.innovativephp.com/demo/impress-js-demos/chapter5/images/aboutme.jpg" class="img-responsive" alt="" />
-            <br>
-            ogl3
-          </div> -->
         </div>
-
       </div>
     </div>
   </div>
