Revamp about page and load in actual data

--- a/src/app/about/about.less
+++ b/src/app/about/about.less
@@ -12,9 +12,17 @@
     .vn-profile-img {
         width: 100px;
     }
-    .vn-member-box {
-        background-color: @color-primary;
-        border-radius: 5px;
-        box-shadow: 5px 5px 10px -4px @color-primary-dark;
+    ul {
+        list-style-type: none;
+    }
+    .vn-sub-comm {
+        min-height: 700px;
+    }
+    .vn-sub-comm ul {
+        line-height: 40px;
+        li {
+            float: left;
+            width: 200px;
+        }
     }
 }
