BG Color Fix + Animated menu icon

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -6,7 +6,7 @@
 #headSection {
   z-index: -10;
   position: fixed;
-  background-color: #1F1F1F;
+  background-color: rgb(34, 34, 34);
   // background-size:cover;
   display: flex;
   justify-content: center; /* align horizontal */
