--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -1,3 +1,16 @@
+.rotate{
+    -moz-transition: all 0.25s linear;
+    -webkit-transition: all 0.25s linear;
+    transition: all 0.25s linear;
+}
+
+.rotate.down{
+    -ms-transform:rotate(180deg);
+    -moz-transform:rotate(180deg);
+    -webkit-transform:rotate(180deg);
+    transform:rotate(180deg);
+}
+
 #body-nav {
   position: fixed;
   overflow: hidden;
