--- a/src/app/info/info.less
+++ b/src/app/info/info.less
@@ -3,7 +3,7 @@
 
 /* ----------- Non-Retina Screens ----------- */
 body{
-  background-color: #1F1F1F;
+  background-color: rgb(34, 34, 34);
   // color: rgb(227, 228, 227);
 }
 #mainDiv {
