--- a/src/app/og/og.less
+++ b/src/app/og/og.less
@@ -6,7 +6,8 @@
 }
 
 #bg {
-  background: url("img/shared/vn-background.jpg") no-repeat center top;
+  // background: url("img/shared/vn-background.jpg") no-repeat center top;
+  background-color: rgb(34, 34, 34);
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
