--- a/src/app/og/ogSubView/ogSubView.tpl.html
+++ b/src/app/og/ogSubView/ogSubView.tpl.html
@@ -3,7 +3,7 @@
   <div class="row">
     <i id="backBtn" ng-click="goBack()" class="fa fa-chevron-left"></i>
     <div class="col-md-6">
-      <img src="{{iconCollection[currentIndex]}}" class="img-responsive" alt="" />
+      <img src="{{ogLogoCollection[currentIndex]}}" class="img-responsive" alt="" />
     </div>
     <div class="col-md-6" id="ogContent">
       <!-- <p id="ogHeader">{{currentName}}</p> -->
