--- a/src/common/navbar.less
+++ b/src/common/navbar.less
@@ -11,6 +11,10 @@
     transform:rotate(180deg);
 }
 
+[ng-cloak], .ng-cloak {
+   display: none !important;
+}
+
 #body-nav {
   position: fixed;
   overflow: hidden;
