--- a/src/app/og/ogSubView/ogSubView.less
+++ b/src/app/og/ogSubView/ogSubView.less
@@ -1,9 +1,21 @@
-
+#headImg{
+  @media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  display: none;
+}
+}
 
 #ogHeader, #ogl{
   // padding-top: 5%;
   font-size: 80px;
   text-align: center;
+  display: none;
+  @media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  display: block;
+}
 }
 
 #headOGL{
@@ -37,10 +49,20 @@ and (max-device-width : 568px) {
 
 #quote{
   text-align: left;
+  @media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  font-size: 15px;
+}
 }
 
 #by{
   text-align: right;
+  @media only screen
+and (min-device-width : 320px)
+and (max-device-width : 568px) {
+  font-size: 15px;
+}
 }
 
 #desc{
